# tms

./: .gitignore  CMakeLists.txt  TMS.cbp  TMS.layout  a.out  build.bat  log.cfg.default  options.sqlite3  test.patch  test.sqlite3
src/client/: CMakeLists.txt  GridFrame.cpp  GridFrame.h  LoginFrame.cpp  LoginFrame.h  TestFrame.cpp  TestFrame.h  client.cpp  client.hpp  companies_frame.cpp  companies_frame.hpp  company_frame.hpp  contact_persons_frame.cpp  contact_persons_frame.hpp  dlg_addressee.cpp  dlg_addressee.hpp  dlg_check_column.cpp  dlg_check_column.hpp  dlg_company.cpp  dlg_company.hpp  dlg_contact_person.cpp  dlg_contact_person.hpp  dlg_incoming.cpp  dlg_incoming.hpp  dlg_login.cpp  dlg_login.hpp  dlg_subject.cpp  dlg_subject.hpp  dlg_user.cpp  dlg_user.hpp  frames_collection.cpp  frames_collection.hpp  frm_grid.cpp  frm_grid.hpp  frm_grid_addressees.cpp  frm_grid_companies.cpp  frm_grid_import_incoming.cpp  frm_grid_incomings.cpp  frm_grid_subjects.cpp  frm_grid_users.cpp  (+17 more)
src/common/archive/: CMakeLists.txt  archive.cpp  archive.hpp
src/common/contraption/: CMakeLists.txt  compare.hpp  contraption.cpp  contraption.hpp  contraption_accessor.hpp  contraption_accessor_fwd.hpp  contraption_array.cpp  contraption_array.hpp  contraption_array_fwd.hpp  contraption_fwd.hpp  contraption_impl.cpp  contraption_impl.hpp  field.hpp  field_exception.hpp  field_fwd.hpp  field_type.hpp  field_type_fwd.hpp  field_type_impl.cpp  filter.hpp  has_many_contraption_array.hpp  has_many_field_contraption_array.cpp  has_many_field_contraption_array.hpp  logical_connective.hpp  model.cpp  model.hpp  model_backend.cpp  model_backend.hpp  model_backend_exception.hpp  model_catalog.hpp  model_contraption_array.cpp  model_contraption_array.hpp  model_fwd.hpp  model_wrapper.cpp  model_wrapper.hpp  record.hpp  record_fwd.hpp  selector.hpp
src/common/contraption/field/: date_field.hpp  has_many_field.hpp  has_one_field.hpp  proxy_field.hpp  simple_field.hpp  simple_field_fwd.hpp
src/common/contraption/fields/: memory_field.hpp
src/common/contraption/filter/: all_filter.hpp  compare_filter.hpp  logical_connective.hpp
src/common/contraption/model_backend/: CMakeLists.txt  memory_model_backend.cpp  memory_model_backend.hpp  server_model_backend.cpp  server_model_backend.hpp  soci_model_backend.cpp  soci_model_backend.hpp
src/common/contraption/models/: memory_model.hpp
src/common/contraption/selector/: all_selector.hpp  compare_selector.hpp
src/common/gui_exception/: .gui_exception.cpp.swp  CMakeLists.txt  gui_exception.cpp  gui_exception.hpp  gui_exception_report.hpp  gui_exception_report_dialog.cpp  gui_exception_report_dialog.hpp  gui_exception_reprot.hpp  guiexception.cpp
src/common/patcher/: CMakeLists.txt  patcher.cpp  patcher.hpp
src/common/patcher/patch/: description
src/common/protocol/: CMakeLists.txt  authentication_response.hpp  client.hpp  crypto.cpp  crypto.hpp  decorator_server.cpp  decorator_server.hpp  login_protocol.cpp  login_protocol.hpp  login_request_processor.cpp  login_request_processor.hpp  login_server.cpp  login_server.hpp  message.hpp  model_bacend_protocol.cpp  model_backend_protocol.cpp  model_backend_protocol.hpp  model_backend_request_processor.cpp  model_backend_request_processor.hpp  model_backend_server.hpp  patcher_protocol.cpp  patcher_protocol.hpp  patcher_request_processor.cpp  patcher_request_processor.hpp  protobuf_clean.cpp  protocol.cpp  protocol.hpp  protocol_exception.hpp  protocol_impl.hpp  request.cpp  request.hpp  request_processor.cpp  request_processor.hpp  response.hpp  response_status.hpp  serialization_exception.hpp  serialization_id.hpp  server.cpp  server.hpp  server_exception.hpp  (+21 more)
src/common/protocol/message/: CMakeLists.txt  delete_entry_request.hpp  delete_entry_request.proto  delete_entry_response.hpp  delete_entry_response.proto  delete_record_request.proto  delete_record_response.proto  disconnect_request.hpp  disconnect_request.proto  error_response.hpp  error_response.proto  filter.hpp  filter.proto  login.proto  login_request.hpp  login_response.hpp  login_response.proto  patch_client_request.hpp  patch_client_request.proto  patch_client_response.hpp  patch_client_response.proto  patch_server_request.hpp  patch_server_request.proto  read_records_request.hpp  read_records_request.proto  read_records_response.hpp  read_records_response.proto  record.hpp  record.proto  select_request.hpp  select_request.proto  select_response.hpp  select_response.proto  write_records_request.hpp  write_records_request.proto  write_records_response.hpp  write_records_response.proto
src/common/protocol/requests/: authentication_request.hpp
src/common/widget/: CMakeLists.txt  column.hpp  contraption_choice.cpp  contraption_choice.hpp  contraption_dialog.cpp  contraption_dialog.hpp  contraption_grid.cpp  contraption_grid.hpp  contraption_grid_table_base.cpp  contraption_grid_table_base.hpp  dlg_check_column.cpp  dlg_check_column.hpp  printer.hpp
src/common/widget/validators/: CMakeLists.txt  bool_validator.cpp  bool_validator.hpp  contraption_routines.hpp  dummy.hpp  has_many_validator.cpp  has_many_validator.hpp  has_one_validator.cpp  has_one_validator.hpp  hide_if_new_validator.hpp  hide_if_validator.cpp  hide_if_validator.hpp  password_validator.cpp  password_validator.hpp  string_validator.cpp  string_validator.hpp  suggest_validator.cpp  suggest_validator.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  server_init.cpp  server_start.cpp
src/test/performance/server/: CMakeLists.txt  client.cpp  server.cpp
src/test/unit/common/contraption/: CMakeLists.txt  field_type_test.cpp  memory_contraption_test.cpp  server_contraption_test.cpp  soci_contraption_test.cpp
src/test/unit/common/gui_exception/: CMakeLists.txt  gui_exception_test.cpp
src/test/unit/common/protocol/: dummy.proto  (+9 more)
src/test/visual/archive/: CMakeLists.txt  compress.cpp  decompress.cpp
src/test/visual/exception/: CMakeLists.txt  main.cpp
src/test/visual/grid/: CMakeLists.txt  main.cpp
src/test/visual/patcher/: CMakeLists.txt  patcher.cpp
(+88 files in other folders)
